K8s/commands-cip.yaml
apiVersion: v1
kind: Service
metadata:
  name: commands-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: commandsservice
  ports:
    - name: commandsservice
      protocol: TCP
      port: 80
      targetPort: 8180
