K8s/hello-rabbitmq.yaml
apiVersion: v1
kind: Service
metadata:
  name: loadbalancer-hello
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/component: rabbitmq
    app.kubernetes.io/name: hello-world
    app.kubernetes.io/part-of: rabbitmq
  ports:
    - protocol: TCP
      port: 15672
      targetPort: 15672
