K8s/platforms-cip.yaml
apiVersion: v1
kind: Service
matadata:
  name: platforms-clusterip-srv
spec:
  type: ClusterIp
  selector:
    app: platformservice
  ports:
    - name: platformservice
      protocol: TCP
      port: 80
      targetPort: 80
