K8s/rabbitmq-cluster.yaml
apiVersion: v1
kind: Service
metadata:
  name: loadbalancer-rabbitmq-cluster
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/component: rabbitmq
    app.kubernetes.io/name: rabbitmq-cluster
    app.kubernetes.io/part-of: rabbitmq
  ports:
    - protocol: TCP
      name: amqp
      port: 5672
      targetPort: 5672
    - protocol: TCP
      name: manager
      port: 15672
      targetPort: 15672
